added more components
need to continue working on user profile in frontend and backend
