# Server/user-service/src/main/resources/specification/api-spec-teams.yaml
@@ -53,9 +53,45 @@ paths:
           description: User added to the team successfully
         '404':
           description: Team or User not found
+  /teams/my-teams:
+    get:
+      summary: Get User Teams
+      description: Retrieve the list of teams associated with the currently authenticated user.
+      tags:
+        - Teams
+      operationId: getUserTeams
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TeamDTO'
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
 
 components:
   schemas:
+    TeamDTO:
+      type: object
+      properties:
+        id:
+          type: string
+          example: "team_123"
+        name:
+          type: string
+          example: "Development Team"
+        description:
+          type: string
+          example: "Team responsible for backend development"
+        created_by:
+          type: integer
     CreateTeamRequest:
       type: object
       properties:
@@ -65,6 +101,9 @@ components:
         created_by:
           type: integer
           description: User ID of the creator
+        description:
+          type: string
+          example: "Team responsible for backend development"
       required:
         - team_name
         - created_by
